# btstack

./: CMakeLists.txt
chipset/nxp/: btstack_chipset_nxp.c
chipset/realtek/: CMakeLists.txt
chipset/zephyr/: CMakeLists.txt
example/: CMakeLists.txt  a2dp_sink_demo.c  gatt_browser.c  gatt_counter.c  hfp_hf_demo.c  hid_host_demo.c  hid_keyboard_demo.c  scan_after_connect.c  sm_pairing_central.c  sm_pairing_peripheral.c
platform/embedded/: CMakeLists.txt
platform/libusb/: CMakeLists.txt
platform/posix/: CMakeLists.txt
port/esp32/components/btstack/: CMakeLists.txt  btstack_port_esp32.c
port/libusb/: CMakeLists.txt  btstack_config.h  main.c
port/posix-h4/: btstack_config.h  main.c
port/posix-h4-nxp/: btstack_config.h  main.c
port/stm32-f4discovery-cc256x/bsp/: stm32f4_discovery_audio.c
port/zephyr/: btstack_config.h
src/: CMakeLists.txt  hci.c  hci.h  hci_transport_h4.c  l2cap.c
src/ble/: CMakeLists.txt  att_server.c  sm.c
src/ble/gatt-service/: CMakeLists.txt
src/classic/: CMakeLists.txt  avrcp.c  btstack_cvsd_plc.c  btstack_sbc_plc.c  hfp.c  hfp.h  hfp_ag.c  hfp_hf.c  sdp_util.c
src/mesh/: CMakeLists.txt
